test/scope7.l1.out
scope7.l1:5: warning: reference to unbound variable: unboundvar
error: reference to unbound variable: unboundvar
	#0                     foo	(scope7.l1:5)
	#1                   entry	(scope7.l1:14)
