test/scope7.l1
@global main;
{
	@defloc foo()
	{
		printf("%a\n", unboundvar);
	}

	@define main()
	{
		foo();	
	}
}

main();
